--- a/client/src/standalone/player/src/sass/shared/peertube-skin.scss
+++ b/client/src/standalone/player/src/sass/shared/peertube-skin.scss
@@ -1,12 +1,22 @@
-@use 'sass:math';
-@use '_variables' as *;
-@use '_mixins' as *;
-@use './_player-variables' as *;
+@use "sass:math";
+@use "_variables" as *;
+@use "_mixins" as *;
+@use "./_player-variables" as *;
 
 body {
   --embed-foreground-color: #{$primary-foreground-color};
+  --embed-background-color: #{$primary-background-color};
 
   --embed-big-play-background-color: #{$primary-background-color};
+
+  // Prevent z-index bug with Firefox PiP button
+  // See:
+  // * https://bugzilla.mozilla.org/show_bug.cgi?id=1742585
+  // * https://bugzilla.mozilla.org/show_bug.cgi?id=1742585
+  // * https://bugzilla.mozilla.org/show_bug.cgi?id=1754604
+  @supports (-moz-orient: block) {
+    --embed-background-color: #000;
+  }
 }
 
 @mixin big-play-button-triangle-size($triangle-size) {
@@ -59,8 +69,8 @@ body {
     }
 
     .vjs-icon-placeholder::before {
-      content: '';
-      background-image: url('./svg/big-play-button.svg');
+      content: "";
+      background-image: url("./svg/big-play-button.svg");
 
       @include big-play-button-triangle-size(45px);
     }
@@ -102,11 +112,6 @@ body {
 
   .vjs-big-play-button {
     background-color: pvar(--embed-big-play-bg);
-  }
-
-  .vjs-settings-dialog,
-  .vjs-control-bar {
-    background-color: $primary-background-color;
   }
 
   .vjs-poster {
@@ -196,7 +201,6 @@ body {
     display: block;
   }
 }
-
 
 // ---------------------------------------------------------------------------
 // Custom media queries
